Preventing image hover zooms on smaller devices

--- a/themes/shell/styles/components/_recommended-content.scss
+++ b/themes/shell/styles/components/_recommended-content.scss
@@ -42,18 +42,6 @@
       width: 33.33333%;
       position: relative;
       overflow: hidden;
-
-      &:hover{
-        h2 a{
-          bottom: 0;
-          transition: $in-transition;
-        }
-
-        img{
-          transform: scale(1.1);
-          transition: all ease-out 2.5s;
-        }
-      }
     }
 
     h2 a{
@@ -109,6 +97,22 @@
 
     &:before{
       font-size: 4.5vw;
+    }
+
+    > .field__item{
+
+      &:hover{
+        
+        h2 a{
+          bottom: 0;
+          transition: $in-transition;
+        }
+
+        img{
+          transform: scale(1.1);
+          transition: all ease-out 2.5s;
+        }
+      }
     }
   }
 }
