--- a/themes/shell/styles/components/_teaser-work.scss
+++ b/themes/shell/styles/components/_teaser-work.scss
@@ -27,14 +27,6 @@
         transform: scale(1);
         transition: all ease-out .1s;
       }
-
-      &:hover{
-
-        img{
-          transform: scale(1.1);
-          transition: all ease-out 2.5s;
-        }
-      }
     }
 
     // Article body container
@@ -114,6 +106,18 @@
     .teaser-content{
       padding: 4vw;
       flex-direction: column;
+    }
+
+    // Article thumbnail
+    .teaser-image{
+
+      &:hover{
+
+        img{
+          transform: scale(1.1);
+          transition: all ease-out 2.5s;
+        }
+      }
     }
 
     // Article summary
